--- a/lendorav.html
+++ b/lendorav.html
@@ -1,1 +1,18 @@
 
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Võimas lendorav </title>
+    <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+    <footer>
+
+        <div class="footer_div">
+            <p id="logo">Võimas lendorav</p>
+        </div>
+    </footer>
+      
+</body>
+</html>
