--- a/lendorav.html
+++ b/lendorav.html
@@ -1,1 +1,14 @@
+<!DOCTYPE html>
+<html>
+<head>
 
+<title>Lendorav</title>
+</head>
+<body>
+    <h1>Miks lendorav</h1>
+    <div class="container">
+      <div class="column">
+
+      </div>
+    </body>
+</html>
