--- a/lendorav.html
+++ b/lendorav.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
-<html lang="et">
-
+<html>
 <head>
-    <link rel=¨stylesheet¨ type=¨text/css¨ href=¨./style.css¨>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lendav orav</title>
+    <title>Lendorav </title>
+    <link rel="stylesheet" href="style.css">
 </head>
+
+<body>
+    <h1>Lendorav</h1>
+      
+</body>
 </html>
