--- a/lendorav3.html
+++ b/lendorav3.html
@@ -1,1 +1,18 @@
+<!DOCTYPE html>
+<html>
+<head>
 
+<title>Lendorav</title>
+</head>
+<body>
+    <h1>Kuidas lendoravat aidata?</h1>
+    <h2>Raiega seotud soovitused</h2>
+    <h3>Kuidas toimida siis, kui oled leidnud lendorava elupaiga?</h3>
+    <h4>Anneta <3</h4>
+    <p>Lendorava nägemise või tegevusjälgede leidmise korral tuleks raie koheselt peatada ja leiust teatada Keskkonnaministeeriumi maakondlikule keskkonnateenistusele või KeM Info-ja Tehnokeskuse loodusbüroole. Seejärel saab leiukoha lendorava elutingimusi tundva spetsialistiga üle vaadata. Metsaraie puhul saab seejärel otsustada kas, kus ja kuidas on võimalik raiet jätkata. Seire andmetele toetudes on selgunud, et lendoravate elupaigas on võimalik teha valikraiet loomade elutingimusikahjustamata.</p>
+    <div class="container">
+      <div class="column">
+
+      </div>
+    </body>
+</html>
