--- a/lendorav3.html
+++ b/lendorav3.html
@@ -2,7 +2,8 @@
 <html>
 <head>
 
-<title>Lendorav</title>
+  <title>Lendorav</title>
+  <link rel="stylesheet" href="style2.css">
 </head>
 <body>
     <h1>Kuidas lendoravat aidata?</h1>
