tegin loading lehe korda, ja nats muudatusi

--- a/lisaleht.html
+++ b/lisaleht.html
@@ -7,13 +7,13 @@
 
     <title>A Glitch Effect Tutorial</title>
 
-     <link rel="stylesheet" href="proov.css">
+     <link rel="stylesheet" href="lisaleht.css">
 </head>
 <body>
     <div class="word">Loading...</div>
     <div class="overlay"></div>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/lettering.js/0.6.1/jquery.lettering.min.js"></script>
-    <script type="text/javascript" src="proov.js"></script>
+    <script type="text/javascript" src="lisaleht.js"></script>
 </body>
 </html>
