java korras, loading korras, lehe esimene lause suurem, dünaamiline tekstolemas

--- a/lendorav2.html
+++ b/lendorav2.html
@@ -58,7 +58,7 @@
     <br>
         <a href="lendorav.html">Tahad veel põnevat lugemist? Uuri juurde!</a>
 
-    <div class="container">
+    <div id="dynamic-content" class="container">
         <h2>2023. aasta loom oli lendorav</h2>
         <img src="lendorav.jpg" alt="Lendorav looduses" class="image">
         <p>2023. aasta loomaks valiti lendorav, kellest on viimastel aastakümnetel kujunenud üks looduskaitse sümboleid.</p>
