--- a/lisaleht.html
+++ b/lisaleht.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"><!-- Tagab ühilduvuse Internet Exploreriga -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>Lendorav Lisaleht</title>
@@ -10,10 +10,10 @@
      <link rel="stylesheet" href="lisaleht.css">
 </head>
 <body>
-    <div class="word">Loading...</div>
-    <div class="overlay"></div>
+    <div class="word">Loading...</div> <!-- Div, mis sisaldab teksti "Loading..."; saab kasutada animatsiooni või dünaamilise teksti jaoks -->
+    <div class="overlay"></div> <!-- Tühi div, mida saab kasutada näiteks taustakihi või efektide jaoks -->
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/lettering.js/0.6.1/jquery.lettering.min.js"></script>
-    <script type="text/javascript" src="lisaleht.js"></script>
-</body>
+    <script type="text/javascript" src="lisaleht.js"></script> 
+</body><!--viited vajalikele asjadele -->
 </html>
