Täiendatud tekst, kaardid ja töötav js

--- a/lendorav.html
+++ b/lendorav.html
@@ -2,32 +2,64 @@
 <html lang="et">
 <head>
     <title>Lendorav</title>
-    <link rel="stylesheet" href="style2.css">
+    <link rel="stylesheet" href="style3.css">
 </head>
-    <nav>
-        <label class="logo">Lendorav</label>
-        <ul>
-          <li><a class="active" href="lendorav.html">Avaleht</a></li>
-          <li><a href="lendorav2.html">Miks lendorav on kaitseall?</a></li>
-          <li><a href="lendorav3.html">Kuidas aidata?</a></li>
-          <li><a href="#">Lisalugemist</a></li>
-        </ul>
-      </nav>
-    <header> 
-        <h1>Kes on lendorav? </h1>
-    </header>
-
-    <h3>1. Iseloomustus.  </h3>
-    <p>Lendoravad on pigem paikse eluviisiga loomad, kusjuures emasloomad eelistavad paiksemat eluala, samas kui isasloomad on liikuvamad. Nende levikut takistavad aga avatud alad, lageraielangid ja noorendikud. Viimaste aastakümnete intensiivsed raied ning tormide tekitatud kahju on suuremad metsamassiivid killustanud, mistõttu vanu metsi on järele jäänud vähe. Selline sobivate elupaikade killustumine viib pikapeale lendoravate elupaikade isoleerumiseni, ohustades nende liigi püsimajäämist.</p>
-    <h3>2. Elupaik ja -viis. </h3>
-        <p>Peamiselt on lendoravad levinud Euraasia segametsavööndis Soomest Siberini. Eesti asub lendoravate levila piiril. Kunagi olid nad levinud üle kogu riigi, kuid nüüd on alles vaid üksikud väikesed asurkonnad Virumaal. Üheks nende kadumise põhjuseks võib olla see, et neil on vaja väga spetsiifilist elupaika. Nimelt asustavad nad vanu, 60-120-aastaseid haava ja kuuse segametsi. Peamiselt veedavadki nad aega haabadel, kusjuures lendorava hall karvkate aitab tal suurepäraselt haavatüvel märkamatuks jääda. Tegu on varjulise eluviisiga loomakesega, keda silmatakse äärmiselt harva. Hoopis paremad šansid on leida nende tegevusjälgi - nimelt võib varakevadeti lendoravate kodumetsas haabade jalamitelt leida nende riisitera suuruseid oranže väljaheiteid.</p>
-    <h3>3. Pesitsemine ja toitumine. </h3>
-        <p>Lendorava suured silmad annavad vihje, et tegu on öise ja videvikulise eluviisiga loomakesega. Maapinnale ei tule nad pea kunagi, veetes kogu elu puudel ja nende vahel liueldes. Oma pesad rajavad nad enamasti vanasse rähniõõnde, haavapuu sisse. See vooderdatakse puudelt kogutud samblike ja lehtedega, vahel ka samblaga. Sama pesapaika võib korraga asustada mitu isendit ja pesi vahetatakse iga paari nädala kuni paari kuu tagant. Hooajati võib lendorav puuõõnde toiduvarusid koguda. Tegu on taimtoiduliste loomadega, põhiliselt süüakse haava lehti, pungasid, urbi või noorte okste koort. Vahel süüakse ka teiste puude osi, näiteks lepa, kase või paju lehti ja võrseid ningg okaspuude käbisid.</p>
-    <h3>4. Sigimine ja areng.</h3>
-        <p>Eesti lendoravad sigivad märtsis-aprillis. Tiinus kestab 5-6 nädalat ja pojad sünnivad mais-juunis. Korraga tuuakse ilmale 1-6, enamasti 2-3 poega, kes kaaluvad sündides umbes 5 g ja on pimedad. Silmad avanevad umbes 2 nädalaga ja imetamine kestab 1 kuu. 2-kuuselt pojad iseseisvuvad ja lahkuvad kodupiirkonnast. Aastas võib sündida 1-2 pesakonda - osad loomad võivad sigida tüüpilisest sigimishooajast hiljem, seega võib pesakondi esineda suve lõpuni.</p>
+    <body>
+        <nav>
+            <label class="logo">Lendorav</label>
+            <ul>
+                <li><a href="lendorav.html">Avaleht</a></li>
+                <li><a href="lendorav2.html">Miks lendorav on kaitseall?</a></li>
+                <li><a href="lendorav3.html">Kuidas aidata?</a></li>
+                <li><a href="lisaleht.html">Lisalugemist</a></li>
+                <script src="lisaleht.js"></script>
+            </ul>
+        </nav>
+        <header> 
+            <h1>Kes on lendorav? </h1>
+        </header>
+    
+    <h2 class="section">Üldiseloomustus  </h2>
+    <p class="=section">Lendorav kuulub näriliste (Rodentia) seltsi oravlaste (Sciuridae) sugukonna perekonda
+        lendorav (Pteromys). Tegemist on oma perekonna ainsa esindajaga nii Eestis kui ka kogu
+        Euroopas. Lendorava eluiga on looduses kuni 7 aastat. Lendoravad on aktiivsemad videvikus ja öösel ning nende ööpäevane aktiivsus sõltub
+        sesoonist ja isendi sigimisaktiivsusest. Lendorav ei maga talveund, kuid käib talvel pesast
+        väljas harvem ning on suhteliselt passiivne. Lendorava hüpped puult puule ulatuvad sageli 30–50 meetrini,
+        “lend” on hääletu, kusjuures sabaga tüürides võib ta muuta suunda nii horisontaal- kui ka
+        vertikaalsihis.</p>
+    <h2 class="section">Elupaik ja -viis </h2>
+        <p class="section">Lendorav elab kogu levila ulatuses vanades kuuse-enamusega segametsades, kus esineb
+            märkimisväärses osas lehtpuid, eriti haaba, kaske ja leppa. Suuremas ruumimastaabis eelistavad Eesti lendoravad viibida vanade haabadega puistutes
+            oluliselt rohkem kui kõigis teistes eristatud biotoopides ning segametsades rohkem kui
+            avatud aladel, raiesmikel ja lehtmetsades. Lendorava suured silmad annavad vihje, et tegu on öise ja videvikulise eluviisiga 
+            loomakesega. Maapinnale ei tule nad pea kunagi, veetes kogu elu puudel ja nende vahel liueldes.</p>
+        <img src="kaart.jpg" alt="Levik Eestis" class="image">
+        <img src="kaart2.jpg" alt="Levik maailmas" class="image">
+        <h2 class="section">Pesitsemine ja toitumine </h2>
+        <p class="section">Lendoraval on tüüpiliselt 2-12 pesa. Ta kasutab nii isetekkelisi
+            (tüvemädaniku tekkelisi) kui ka rähnide rajatud õõnsusi. Lendorav vooderdab pesa sambla, (habe)samblike,
+            puukõdu, männiokste, peenestatud niinekiudude ja karvadega. Sama pesapaika võib korraga asustada mitu 
+            isendit ja pesi vahetatakse iga paari nädala kuni paari kuu tagant. Hooajati võib lendorav puuõõnde toiduvarusid koguda. 
+            Tegu on taimtoiduliste loomadega, põhiliselt süüakse haava lehti, pungasid, urbi või noorte okste koort. 
+            Vahel süüakse ka teiste puude osi, näiteks lepa, kase või paju lehti ja võrseid ningg okaspuude käbisid.</p>
+    <h2 class="section">Sigimine ja areng</h2>
+        <p class="section">Lendoravatel sünnib aastas üks kuni kaks pesakonda. Sigimisperiood algab märtsis (Eestis on jooksuaeg märtsis-aprillis)
+            ning kestab mai keskpaigani, mil ka teine pesakond on viljastatud. Emaslooma tiinus kestab 40–42 päeva. 
+            Poegi on pesakonnas 1–4. Vastsündinud lendoravad on juba lennunahaga, kuid täiesti paljad ja pigmendita. Silmalaud
+            ja kõrvaavad on suletud, tagajalgade varbad lahknemata. Silmad avanevad 17. elupäeval või
+            veidi varem. Hambad hakkavad lõikuma alates kuuendast elupäevast ja 30. päevaks on
+            hammastu täielik. Poegade imetamisperiood kestab 42–45 päeva. Pojad hakkavad
+            pesaõõnsusest väljas käima 40–45 päeva vanuselt. 50 päeva vanuselt toituvad pojad juba
+            iseseisvalt, liuglevad ühelt puult teisele ja uurivad ümbrust</p>
+<!-- Viide JavaScripti failile -->
+<script src="ilmuv_tekst.js"></script>
         <footer>
-            <p>Rohkem infot leiad: <br> <a href="https://bio.edu.ee/loomad/Imetajad/PTEVOL2.htm">Bio.edu.ee</a></p>
+            <p>Rohkem infot leiad: <br> 
+                <a href="https://keskkonnaamet.ee/sites/default/files/documents/2023-01/Lendorava_kaitse_tegevuskava_2023-2027_redigeeritud_versioon.pdf">Lendorava kaitse tegevuskava</a>
+            </p>
+            <p><a href="https://bio.edu.ee/loomad/Imetajad/PTEVOL2.htm">Bio.edu.ee</a></p>
         </footer>
+
 </body>
 </html>
 
