tegin vist koledamaks

--- a/lendorav3.html
+++ b/lendorav3.html
@@ -16,21 +16,32 @@
         <li><a href="#">Lisalugemist</a></li>
     </ul>
 </nav>
-<h1>Kuidas lendoravat aidata?</h1>
-<p>Lendoravate olukorra paranemisele saab igaüks kaasa aidata. Selleks on mitmeid võimalusi.</p>
 
-<h2 class="section">Elupaikade kaitse</h2>
-<p class="section">Lendorava arvukuse languse peapõhjuseks loetakse elupaikade nappust ja nendevahelise sidususe puudumist. Raietööd lendoravate elupaikades on enamasti tulenenud teadmatusest, et kavandataval raielangil lendoravad elavad. Seetõttu on vajalik tähelepanelikumalt üle vaadata need raiele minevad metsad, mis asuvad praeguste või endiste lendorava leiukohtade läheduses, sest loomad võisid oma varjatud eluviisi tõttu siiani märkamatuks jääda.</p>
-<p>Lendorava nägemise või tegevusjälgede leidmise korral tuleks raie koheselt peatada ja leiust teatada Keskkonnaministeeriumi maakondlikule keskkonnateenistusele või KeM Info-ja Tehnokeskuse loodusbüroole. Seejärel saab leiukoha lendorava elutingimusi tundva spetsialistiga üle vaadata. Metsaraie puhul saab seejärel otsustada kas, kus ja kuidas on võimalik raiet jätkata. Seire andmetele toetudes on selgunud, et lendoravate elupaigas on võimalik teha valikraiet loomade elutingimusi kahjustamata.</p>
+<header> 
+    <h1>Kuidas lendoravat aidata?</h1>
+    <img src="kolmandale_lehele.jpg" alt="Pildi kirjeldus" class="header-image">
+</header>
 
-<h2 class="section">Aita tõsta teadlikkust</h2>
-<p class="section">Lendorava kaitse sõltub iga inimese teadlikkusest ja hoolivusest. Üks lihtsamaid viise lendoravat aidata on jagada tema kohta informatsiooni oma perele, sõpradele ja tuttavatele. Võid jagada sotsiaalmeedias lendorava kaitsega seotud postitusi või võtta osa harivatest üritustest.</p>
+<div class="box">
+    <h2>Elupaikade kaitse</h2>
+    <p>Lendorava arvukuse languse peapõhjuseks loetakse elupaikade nappust ja nendevahelise sidususe puudumist. Raietööd lendoravate elupaikades on enamasti tulenenud teadmatusest, et kavandataval raielangil lendoravad elavad. Seetõttu on vajalik tähelepanelikumalt üle vaadata need raiele minevad metsad, mis asuvad praeguste või endiste lendorava leiukohtade läheduses, sest loomad võisid oma varjatud eluviisi tõttu siiani märkamatuks jääda.</p>
+    <p>Lendorava nägemise või tegevusjälgede leidmise korral tuleks raie koheselt peatada ja leiust teatada Keskkonnaministeeriumi maakondlikule keskkonnateenistusele või KeM Info-ja Tehnokeskuse loodusbüroole. Seejärel saab leiukoha lendorava elutingimusi tundva spetsialistiga üle vaadata. Metsaraie puhul saab seejärel otsustada kas, kus ja kuidas on võimalik raiet jätkata. Seire andmetele toetudes on selgunud, et lendoravate elupaigas on võimalik teha valikraiet loomade elutingimusi kahjustamata.</p>
+</div>
 
-<h2 class="section">Löö kaasa</h2>
-<p class="section">Võimalik on osaleda lendorava kaitsega seotud loodustalgutel. Lisaks saab andmeid lendoravate esinemise kohta, sealhulgas ka varasemate leidude kohta esitada Eestimaa Looduse Fondile. Eestimaa Looduse Fond pakub võimalust oma tegevustes lüüa kaasa vabatahtlikuna.</p>
+<div class="box">
+    <h2>Aita tõsta teadlikkust</h2>
+    <p>Lendorava kaitse sõltub iga inimese teadlikkusest ja hoolivusest. Üks lihtsamaid viise lendoravat aidata on jagada tema kohta informatsiooni oma perele, sõpradele ja tuttavatele. Võid jagada sotsiaalmeedias lendorava kaitsega seotud postitusi või võtta osa harivatest üritustest.</p>
+</div>
 
-<h2 class="section">Toeta annetusega</h2>
-<p class="section">Annetusi kogub näiteks Eestimaa Looduse Fond, kellel on lendorav vapiloomaks. ELF seisab selle eest, et haruldane lendorav meie metsadest lõplikult ei kaoks. Selle tarvis on ELFi kogutud annetuste abiga uuritud lendoravaid ning hoitud muret nende elupaikade, põlislaante hävitamise pärast ühiskonnas päevakajalisena. Sul on võimalus hakata püsiannetajaks või teha ühekordne annetus.</p>
+<div class="box">
+    <h2>Löö kaasa</h2>
+    <p>Võimalik on osaleda lendorava kaitsega seotud loodustalgutel. Lisaks saab andmeid lendoravate esinemise kohta, sealhulgas ka varasemate leidude kohta esitada Eestimaa Looduse Fondile. Eestimaa Looduse Fond pakub võimalust oma tegevustes lüüa kaasa vabatahtlikuna.</p>
+</div>
+
+<div class="box">
+    <h2>Toeta annetusega</h2>
+    <p>Annetusi kogub näiteks Eestimaa Looduse Fond, kellel on lendorav vapiloomaks. ELF seisab selle eest, et haruldane lendorav meie metsadest lõplikult ei kaoks. Selle tarvis on ELFi kogutud annetuste abiga uuritud lendoravaid ning hoitud muret nende elupaikade, põlislaante hävitamise pärast ühiskonnas päevakajalisena. Sul on võimalus hakata püsiannetajaks või teha ühekordne annetus.</p>
+</div>
 
 <div class="center-container">
     <!-- Annetuse nupp -->
