--- a/lendorav.html
+++ b/lendorav.html
@@ -33,9 +33,7 @@
             oluliselt rohkem kui kõigis teistes eristatud biotoopides ning segametsades rohkem kui
             avatud aladel, raiesmikel ja lehtmetsades. Lendorava suured silmad annavad vihje, et tegu on öise ja videvikulise eluviisiga 
             loomakesega. Maapinnale ei tule nad pea kunagi, veetes kogu elu puudel ja nende vahel liueldes.</p>
-        <img src="kaart.jpg" alt="Levik Eestis" class="image">
-        <img src="kaart2.jpg" alt="Levik maailmas" class="image">
-        <h2 class="section">Pesitsemine ja toitumine </h2>
+    <h2 class="section">Pesitsemine ja toitumine </h2>
         <p class="section">Lendoraval on tüüpiliselt 2-12 pesa. Ta kasutab nii isetekkelisi
             (tüvemädaniku tekkelisi) kui ka rähnide rajatud õõnsusi. Lendorav vooderdab pesa sambla, (habe)samblike,
             puukõdu, männiokste, peenestatud niinekiudude ja karvadega. Sama pesapaika võib korraga asustada mitu 
@@ -50,7 +48,18 @@
             veidi varem. Hambad hakkavad lõikuma alates kuuendast elupäevast ja 30. päevaks on
             hammastu täielik. Poegade imetamisperiood kestab 42–45 päeva. Pojad hakkavad
             pesaõõnsusest väljas käima 40–45 päeva vanuselt. 50 päeva vanuselt toituvad pojad juba
-            iseseisvalt, liuglevad ühelt puult teisele ja uurivad ümbrust</p>
+            iseseisvalt, liuglevad ühelt puult teisele ja uurivad ümbrust.</p>
+    <h2 class="section">Levik</h2>
+    <p class="section">Lendoravlaste sugukonda kuuluvast umbes kümnest perekonnast esineb enamik Vana
+        Maailma troopilises vööndis. Sugukonna üks väiksemaid esindajaid, lendorav on taiga
+        faunistiline element. Ta on levinud palearktise põhjaosa metsavööndites – ulatudes Euroopa
+        põhjaosas Soomest Siberi, Mongoolia, Korea ja Kirde-Hiina metsadeni. 
+        Alates 20. sajandi algusest on lendorava esinemiskohtade arv levila lääneosas pidevalt
+        kahanenud ning ta on kantud regionaalsetesse Punastesse ja kaitstavate liikide nimestikesse.
+        Lendorav on kogu levila ulatuses levinud hajusalt, olles kõikjal väikesearvuline. 
+        Lendorav esineb tänaseks Euroopa Liidu riikidest vaid Soomes ja Eestis.</p>
+        <img src="kaart.jpg" alt="Levik Eestis" class="image">
+        <img src="kaart2.jpg" alt="Levik maailmas" class="image">
 <!-- Viide JavaScripti failile -->
 <script src="ilmuv_tekst.js"></script>
         <footer>
