--- a/lisaleht.html
+++ b/lisaleht.html
@@ -12,8 +12,8 @@
 <body>
     <div class="word">Loading...</div> <!-- Div, mis sisaldab teksti "Loading..."; saab kasutada animatsiooni või dünaamilise teksti jaoks -->
     <div class="overlay"></div> <!-- Tühi div, mida saab kasutada näiteks taustakihi või efektide jaoks -->
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/lettering.js/0.6.1/jquery.lettering.min.js"></script>
-    <script type="text/javascript" src="lisaleht.js"></script> 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/lettering.js/0.6.1/jquery.lettering.min.js"></script>
+    <script src="lisaleht.js"></script> 
 </body><!--viited vajalikele asjadele -->
 </html>
