Üritasin saada kaste

--- a/lendorav.html
+++ b/lendorav.html
@@ -18,30 +18,35 @@
         <header> 
             <h1>Kes on lendorav? </h1>
         </header>
-    
-    <h2 class="section">Üldiseloomustus  </h2>
-    <p class="=section">Lendorav kuulub näriliste (Rodentia) seltsi oravlaste (Sciuridae) sugukonna perekonda
+    <div class="box">
+    <h2>Üldiseloomustus  </h2>
+    <p>Lendorav kuulub näriliste (Rodentia) seltsi oravlaste (Sciuridae) sugukonna perekonda
         lendorav (Pteromys). Tegemist on oma perekonna ainsa esindajaga nii Eestis kui ka kogu
         Euroopas. Lendorava eluiga on looduses kuni 7 aastat. Lendoravad on aktiivsemad videvikus ja öösel ning nende ööpäevane aktiivsus sõltub
         sesoonist ja isendi sigimisaktiivsusest. Lendorav ei maga talveund, kuid käib talvel pesast
         väljas harvem ning on suhteliselt passiivne. Lendorava hüpped puult puule ulatuvad sageli 30–50 meetrini,
-        “lend” on hääletu, kusjuures sabaga tüürides võib ta muuta suunda nii horisontaal- kui ka
-        vertikaalsihis.</p>
-    <h2 class="section">Elupaik ja -viis </h2>
-        <p class="section">Lendorav elab kogu levila ulatuses vanades kuuse-enamusega segametsades, kus esineb
+        “lend” on hääletu, kusjuures sabaga tüürides võib ta muuta suunda nii horisontaal- kui ka vertikaalsihis.</p>
+    </div>
+    <div class="box">
+    <h2>Elupaik ja -viis </h2>
+        <p>Lendorav elab kogu levila ulatuses vanades kuuse-enamusega segametsades, kus esineb
             märkimisväärses osas lehtpuid, eriti haaba, kaske ja leppa. Suuremas ruumimastaabis eelistavad Eesti lendoravad viibida vanade haabadega puistutes
             oluliselt rohkem kui kõigis teistes eristatud biotoopides ning segametsades rohkem kui
             avatud aladel, raiesmikel ja lehtmetsades. Lendorava suured silmad annavad vihje, et tegu on öise ja videvikulise eluviisiga 
             loomakesega. Maapinnale ei tule nad pea kunagi, veetes kogu elu puudel ja nende vahel liueldes.</p>
-    <h2 class="section">Pesitsemine ja toitumine </h2>
-        <p class="section">Lendoraval on tüüpiliselt 2-12 pesa. Ta kasutab nii isetekkelisi
+    </div>
+    <div class="box">
+    <h2>Pesitsemine ja toitumine </h2>
+        <p>Lendoraval on tüüpiliselt 2-12 pesa. Ta kasutab nii isetekkelisi
             (tüvemädaniku tekkelisi) kui ka rähnide rajatud õõnsusi. Lendorav vooderdab pesa sambla, (habe)samblike,
             puukõdu, männiokste, peenestatud niinekiudude ja karvadega. Sama pesapaika võib korraga asustada mitu 
             isendit ja pesi vahetatakse iga paari nädala kuni paari kuu tagant. Hooajati võib lendorav puuõõnde toiduvarusid koguda. 
             Tegu on taimtoiduliste loomadega, põhiliselt süüakse haava lehti, pungasid, urbi või noorte okste koort. 
             Vahel süüakse ka teiste puude osi, näiteks lepa, kase või paju lehti ja võrseid ningg okaspuude käbisid.</p>
-    <h2 class="section">Sigimine ja areng</h2>
-        <p class="section">Lendoravatel sünnib aastas üks kuni kaks pesakonda. Sigimisperiood algab märtsis (Eestis on jooksuaeg märtsis-aprillis)
+    </div>
+    <div class="box">
+    <h2>Sigimine ja areng</h2>
+        <p>Lendoravatel sünnib aastas üks kuni kaks pesakonda. Sigimisperiood algab märtsis (Eestis on jooksuaeg märtsis-aprillis)
             ning kestab mai keskpaigani, mil ka teine pesakond on viljastatud. Emaslooma tiinus kestab 40–42 päeva. 
             Poegi on pesakonnas 1–4. Vastsündinud lendoravad on juba lennunahaga, kuid täiesti paljad ja pigmendita. Silmalaud
             ja kõrvaavad on suletud, tagajalgade varbad lahknemata. Silmad avanevad 17. elupäeval või
@@ -49,8 +54,10 @@
             hammastu täielik. Poegade imetamisperiood kestab 42–45 päeva. Pojad hakkavad
             pesaõõnsusest väljas käima 40–45 päeva vanuselt. 50 päeva vanuselt toituvad pojad juba
             iseseisvalt, liuglevad ühelt puult teisele ja uurivad ümbrust.</p>
-    <h2 class="section">Levik</h2>
-    <p class="section">Lendoravlaste sugukonda kuuluvast umbes kümnest perekonnast esineb enamik Vana
+        </div>
+        <div class="box">
+    <h2>Levik</h2>
+    <p>Lendoravlaste sugukonda kuuluvast umbes kümnest perekonnast esineb enamik Vana
         Maailma troopilises vööndis. Sugukonna üks väiksemaid esindajaid, lendorav on taiga
         faunistiline element. Ta on levinud palearktise põhjaosa metsavööndites – ulatudes Euroopa
         põhjaosas Soomest Siberi, Mongoolia, Korea ja Kirde-Hiina metsadeni. 
@@ -58,17 +65,18 @@
         kahanenud ning ta on kantud regionaalsetesse Punastesse ja kaitstavate liikide nimestikesse.
         Lendorav on kogu levila ulatuses levinud hajusalt, olles kõikjal väikesearvuline. 
         Lendorav esineb tänaseks Euroopa Liidu riikidest vaid Soomes ja Eestis.</p>
+    </div>
         <img src="kaart.jpg" alt="Levik Eestis" class="image">
         <img src="kaart2.jpg" alt="Levik maailmas" class="image">
-<!-- Viide JavaScripti failile -->
-<script src="ilmuv_tekst.js"></script>
+
         <footer>
             <p>Rohkem infot leiad: <br> 
                 <a href="https://keskkonnaamet.ee/sites/default/files/documents/2023-01/Lendorava_kaitse_tegevuskava_2023-2027_redigeeritud_versioon.pdf">Lendorava kaitse tegevuskava</a>
             </p>
             <p><a href="https://bio.edu.ee/loomad/Imetajad/PTEVOL2.htm">Bio.edu.ee</a></p>
         </footer>
-
+<!-- Viide JavaScripti failile -->
+<script src="script.js"></script>
 </body>
 </html>
 
