--- a/lendorav3.html
+++ b/lendorav3.html
@@ -52,10 +52,10 @@
 <script src="script.js"></script>
 
 <footer>
-    <p>Rohkem infot leiad: <br> 
+    <h4>Rohkem infot leiad: <br> 
         <a href="https://www.keskkonnaamet.ee/sites/default/files/documents/2023-09/Lendoravaraamat.pdf">Lendorava raamat</a>
-    </p>
-    <p><a href="https://elfond.ee/">elfond.ee</a></p>
+        <br>
+        <a href="https://elfond.ee/">elfond.ee</a></h4>
 </footer>
 </body>
 </html>
