--- a/lendorav3.html
+++ b/lendorav3.html
@@ -3,6 +3,7 @@
 <head>
     <title>Lendorav</title>
     <link rel="stylesheet" href="style3.css">
+    <link rel="stylesheet" href="yhine.css">
     <meta charset="UTF-8">
 </head>
 
