--- a/lendorav2.html
+++ b/lendorav2.html
@@ -3,6 +3,7 @@
 <head>
     <title>Lendorav</title>
     <link rel="stylesheet" href="style2.css">
+    <link rel="stylesheet" href="yhine.css">
     <meta charset="UTF-8">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lettering.js/0.7.0/jquery.lettering.min.js"></script>
