--- a/lendorav2.html
+++ b/lendorav2.html
@@ -71,10 +71,10 @@
 
 
 <footer>
-    <p>Rohkem infot leiad: <br> <a href="https://www.loodushoid.ee">Loodushoid.ee</a></p>
+    <h4>Rohkem infot leiad: <br> <a href="https://www.loodushoid.ee">Loodushoid.ee</a></h4>
 </footer>
     
-<script src="ilmuv_tekst.js"></script> 
+<script src="kastid.js"></script> 
 
 </body>
 </html>
