--- a/lendorav.html
+++ b/lendorav.html
@@ -2,7 +2,7 @@
 <html lang="et">
 <head>
     <title>Lendorav</title>
-    <link rel="stylesheet" href="style3.css">
+    <link rel="stylesheet" href="yhine.css">
 </head>
 <body>
     <nav>
