--- a/lendorav3.html
+++ b/lendorav3.html
@@ -50,8 +50,8 @@
 </div>
 
 
-<script src="script.js"></script>
-<script src="skript.js"></script>
+<script src="annetusnupp.js"></script>
+<script src="kastid.js"></script>
 
 <footer>
     <h4>Rohkem infot leiad: <br> 
