--- a/lendorav.html
+++ b/lendorav.html
@@ -74,10 +74,10 @@
         <p>Lendorava levik maailmas (IUCN 2008)</p>
     </div>
         <footer>
-            <p>Rohkem infot leiad: <br> 
+            <h4>Rohkem infot leiad: <br> 
                 <a href="https://keskkonnaamet.ee/sites/default/files/documents/2023-01/Lendorava_kaitse_tegevuskava_2023-2027_redigeeritud_versioon.pdf">Lendorava kaitse tegevuskava</a>
-            </p>
-            <p><a href="https://bio.edu.ee/loomad/Imetajad/PTEVOL2.htm">Bio.edu.ee</a></p>
+            </h4>
+            <h4><a href="https://bio.edu.ee/loomad/Imetajad/PTEVOL2.htm">Bio.edu.ee</a></h4>
         </footer>
 <!-- Viide JavaScripti failile -->
 <script src="kastid.js"></script>
