tühi kast kustutatud

--- a/lendorav.html
+++ b/lendorav.html
@@ -74,8 +74,8 @@
         <footer>
             <h4>Rohkem infot leiad: <br> 
                 <a href="https://keskkonnaamet.ee/sites/default/files/documents/2023-01/Lendorava_kaitse_tegevuskava_2023-2027_redigeeritud_versioon.pdf">Lendorava kaitse tegevuskava</a>
-            </h4>
-            <h4><a href="https://bio.edu.ee/loomad/Imetajad/PTEVOL2.htm">Bio.edu.ee</a></h4>
+            <br>
+            <a href="https://bio.edu.ee/loomad/Imetajad/PTEVOL2.htm">Bio.edu.ee</a></h4>
         </footer>
 <!-- Viide JavaScripti failile -->
 <script src="kastid.js"></script>
