--- a/lendorav.html
+++ b/lendorav.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="et">
 <head>
+    <meta charset="UTF-8">
     <title>Lendorav</title>
     <link rel="stylesheet" href="yhine.css">
 </head>
